--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
 <div class="inline-block w-full bg-white rounded-md shadow-md px-2 py-1">
 
-  <form class="">
+  <form [formGroup]="searchForm" class="">
     <div class="flex flex-row-reverse ">
 
       <div
@@ -14,11 +14,11 @@
         </select>
       </div>
         <div class="relative w-full mr-2">
-          <input type="search"
+          <input formControlName="search" type="search"
             class="inline-block py-2 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-md  border border-gray-300"
             placeholder="البحث باسم المعاملة..." size="125" maxlength="100" required>
         </div>
-      <button type="submit"
+      <button (click)="searchTreatments()" type="submit"
         class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md text-sm p-2.5 text-center inline-flex items-center mr-2 ">
         <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
