--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -1,16 +1,19 @@
 <div class="inline-block w-full bg-white rounded-md shadow-md px-2 py-1">
 
-  <form [formGroup]="searchForm" class="">
+  <form [formGroup]="searchForm" (ngSubmit)="onSubmit()" class="">
     <div class="flex flex-row-reverse ">
 
       <div
         class="flex-shrink z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
                           border border-gray-300 rounded-md hover:bg-gray-200 focus:outline-none  ">
-        <select class="py-1 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment" id="treatment">
-          <option class="inline-flex  w-full px-4 py-1  hover:bg-gray-100 bg-gray-100" value="1">كل المعاملات</option>
-          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="2">ابيسم</option>
-          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="3">دولار</option>
-          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="4">سبميت</option>
+        <select formControlName="searchTag" class="py-1 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment"
+          id="treatment">
+          <option class="inline-flex  w-full px-4 py-1  hover:bg-gray-100 bg-gray-100" value="all" [defaultSelected]="true">كل
+            المعاملات</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="new">الجديد</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="requests">طلبات</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="urgent">عاجلة</option>
+          <option class="inline-flex flex-row-reverse w-full px-4 py-1 hover:bg-gray-100 " value="delayed">مؤجلة</option>
         </select>
       </div>
         <div class="relative w-full mr-2">
@@ -18,7 +21,7 @@
             class="inline-block py-2 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-md  border border-gray-300"
             placeholder="البحث باسم المعاملة..." size="125" maxlength="100" required>
         </div>
-      <button (click)="searchTreatments()" type="submit"
+      <button type="submit"
         class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md text-sm p-2.5 text-center inline-flex items-center mr-2 ">
         <svg fill="none" class="w-5 h-5" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
