--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -19,7 +19,7 @@
   <p>الاجراءات السريعة</p>
   <div class="flex flex-row-reverse flex-wrap mt-2">
     <button type="button"
-      class="text-white bg-green-600  focus:ring-4 focus:outline-none focus:ring-green-200 font-medium rounded-sm shadow-md text-sm px-6 py-2 text-center mr-2 mb-2">احالة</button>
+      class="text-white border-2 border-dotted border-green-600 bg-green-600 font-medium rounded-md shadow-md text-sm px-6 py-2 text-center mr-2 mb-2 hover:bg-transparent hover:border-emerald-700 hover:border-dotted hover:border-2 hover:text-green-700">احالة</button>
       
   </div>
   </div>
