--- a/src/app/shared/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/confirm-modal/confirm-modal.component.html
@@ -1,7 +1,6 @@
-<div id="popup-modal" tabindex="-1"
-  class="w-1/2 h-1/2 absolute top-1/4 left-1/4 rounded-3xl  p-4 flex items-center justify-center backdrop-blur-md">
-  <div class="relative w-full max-w-md max-h-full">
-    <div class="relative bg-white rounded-lg shadow ">
+<div class="w-1/3 h-1/3 absolute top-1/4 left-1/4 rounded-3xl flex items-center justify-center backdrop-blur-md">
+  <div class="w-full max-w-md max-h-full">
+    <div class="relative rounded-lg shadow border-2 border-green-400">
       <div class="modal-header">
           <ng-content select="[modal-header]"></ng-content>
       </div>
