--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -53,12 +53,12 @@
       <div modal-footer>
         <div class="flex p-5">
         <button data-modal-hide="popup-modal" type="button"
-          class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2"
+          class="mx-0.5 bg-gradient-to-bl from-green-400 to-green-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-md shadow-inner hover:bg-gradient-to-br"
           (click)="submitAssignment()">
           تأكيد
         </button>
         <button data-modal-hide="popup-modal" type="button"
-          class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 "
+          class="mx-0.5 inline-block px-5 py-2 my-1 border-solid border-2 text-black border-gray-200 font-medium rounded-md hover:text-gray-900 hover:bg-gray-200"
           (click)="onConfirmationCloseHandled()">الغاء</button>
           </div>
       </div>
