--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -54,7 +54,7 @@
         <div class="flex p-5">
         <button data-modal-hide="popup-modal" type="button"
           class="mx-0.5 bg-gradient-to-bl from-green-400 to-green-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-md shadow-inner hover:bg-gradient-to-br"
-          (click)="submitAssignment()">
+          (click)="submitAssignment(treatment$.id)">
           تأكيد
         </button>
         <button data-modal-hide="popup-modal" type="button"
