--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,7 +1,13 @@
 <header class="flex flex-nowrap flex-row-reverse py-5 bg-white shadow-md sticky">
   <nav class="w-full  mx-auto px-2 sm:flex sm:items-center sm:justify-between" aria-label="Global">
-    <div class="flex flex-row-reverse items-left gap-5 mt-5 ml-5">
+    <div class="flex flex-row-reverse items-left justify-center gap-2 mt-5 ml-5 hover:text-gray-400">
       {{user?.username || ' مستخدم مجهول'}}
+        <svg class="w-5 h-5 hover:text-gray-400" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z">
+          </path>
+        </svg>
     </div>
     <div class="flex flex-row-reverse items-center gap-5 mt-5 mr-5 sm:justify-end sm:mt-0 sm:pl-5">
       <img src="../assets/asir_logo.jpg" class="w-40 h-10">
