--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -11,7 +11,7 @@
         </a>
 
         <h2 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">
-          مرحبا بكم في منصة مكين لايت
+          مرحبا بكم في منصة مكين ايليت
         </h2>
 
         <p class="mt-4 leading-relaxed text-white/90">
