--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -1,4 +1,4 @@
-<section class="bg-#f8f8f8">
+<section class="bg-#f8f8f8 w-3/4 h-3/4 mx-auto ">
   <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
     <section class="relative flex h-32 items-end bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6">
       <img alt="Night" src="../../../../../assets/side_img.png"
