--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -1,8 +1,8 @@
-<section class="bg-#f8f8f8 w-3/4 h-3/4 mx-auto ">
-  <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
+<section class="w-3/4 h-3/4 mx-auto ">
+  <div class="lg:grid lg:min-h-screen lg:grid-cols-12 rounded-3xl shadow-2xl ">
     <section class="relative flex h-32 items-end bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6">
       <img alt="Night" src="../../../../../assets/side_img.png"
-        class="absolute inset-0 h-full w-full object-cover opacity-80" />
+        class="absolute inset-0 h-full w-full object-cover opacity-80 rounded-l-3xl" />
 
       <div class="hidden lg:relative lg:block lg:p-12">
         <a class="block text-white" >
