--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -1,8 +1,8 @@
-<section class="w-3/4 h-3/4 mx-auto ">
+<section class="container mx-auto ">
   <div class="lg:grid lg:min-h-screen lg:grid-cols-12 rounded-3xl shadow-2xl ">
-    <section class="relative flex h-32 items-end bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6">
+    <section class="relative flex h-32 items-end lg:col-span-5 lg:h-full xl:col-span-6">
       <img alt="Night" src="../../../../../assets/side_img.png"
-        class="absolute inset-0 h-full w-full object-cover opacity-80 rounded-l-3xl" />
+        class="absolute inset-0 h-full w-full object-cover brightness-75 rounded-l-3xl" />
 
       <div class="hidden lg:relative lg:block lg:p-12">
         <a class="block text-white" >
@@ -21,9 +21,9 @@
     </section>
 
     <main aria-label="Main"
-      class="flex items-center justify-center px-8 py-8 sm:px-12 lg:col-span-7 lg:px-16 lg:py-12 xl:col-span-6">
+      class="flex items-center justify-center px-8 py-8 sm:px-12  lg:col-span-7 lg:px-16 lg:py-12 xl:col-span-6">
       <div class="max-w-xl lg:max-w-3xl">
-        <div class="relative -mt-16 block lg:hidden">
+        <div class="relative mt-16 block lg:hidden">
           <a class="inline-flex h-16 w-16 items-center justify-center rounded-full bg-white text-blue-600 sm:h-20 sm:w-20"
             >
             <span class="sr-only">Home</span>
@@ -49,7 +49,7 @@
               class="mt-1 w-80 rounded-s border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right" disabled />
           </div>
           <div class="col-span-6">
-            <app-input [control]="authForm.get('email')" placeholder="lorem@ipsum.com" type="email"
+            <app-input [control]="authForm.get('email')" placeholder="email@mail.com" type="email"
               label="البريد الالكتروني"></app-input>
             </div>
             <div class="col-span-6">
