--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -2,7 +2,7 @@
   <div class="lg:grid lg:min-h-screen lg:grid-cols-12 rounded-3xl shadow-2xl ">
     <section class="relative flex h-32 items-end lg:col-span-5 lg:h-full xl:col-span-6">
       <img alt="Night" src="../../../../../assets/side_img.png"
-        class="absolute inset-0 h-full w-full object-cover brightness-75 rounded-l-3xl" />
+        class="absolute inset-0 h-full w-full object-cover brightness-75 lg:rounded-l-3xl" />
 
       <div class="hidden lg:relative lg:block lg:p-12">
         <a class="block text-white" >
