--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -1,6 +1,6 @@
-<section class="container mx-auto ">
+<section class="container mx-auto">
   <div class="lg:grid lg:min-h-screen lg:grid-cols-12 rounded-3xl shadow-2xl ">
-    <section class="relative flex h-36 items-end lg:col-span-5 lg:h-full xl:col-span-6">
+    <section class="header-img relative flex h-40 items-end lg:col-span-5 lg:h-full xl:col-span-6">
       <img alt="Night" src="../../../../../assets/side_img.png"
         class="absolute inset-0 h-full w-full object-cover brightness-75 lg:rounded-l-3xl" />
 
