--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<aside class="fixed top-0 right-0 z-40 w-14 h-screen pt-20  bg-white border-l border-gray-200  ">
+<aside class="fixed top-0 right-0 w-14 h-screen pt-20  bg-white border-l border-gray-200  ">
   <!-- Side Nav Bar-->
   <div class="h-full flex flex-col items-center justify-center">
 
