--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -40,8 +40,9 @@
         </div>
 
         <form class="mt-8 grid grid-cols-6 gap-6" [formGroup]="authForm" (ngSubmit)="onSubmit()">
-          <div class="col-span-6">
+          <div class="col-span-6 ">
             <img class="w-1/2 mx-auto" src="../../../../../assets/logo_2.jpg" alt="">
+        <p class="text-center font-extrabold"> مرحبا بكم في منصة مكين ايليت</p>
           </div>
           <div class="col-span-6 hidden">
                     <label for="EmpNumber" class="block text-sm font-semibold text-gray-700">
