--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <form class="mt-8 grid grid-cols-6 gap-6" [formGroup]="authForm" (ngSubmit)="onSubmit()">
-          <div class="col-span-6 ">
+          <div class="col-span-6 hidden lg:block">
             <img class="w-1/2 mx-auto" src="../../../../../assets/logo_2.jpg" alt="">
         <p class="text-center font-extrabold"> مرحبا بكم في منصة مكين ايليت</p>
           </div>
