--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white h-full mx-4 pb-12 rounded-s shadow-md overflow-scroll">
+<div class="bg-white h-max mx-4 pb-12 rounded-s shadow-md overflow-y-scroll">
   <div class="px-6 py-4">
     <div class="font-bold text-xl mb-2 flex flex-row-reverse justify-between">
       {{treatment$.subject}}
