--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -52,17 +52,34 @@
             <input type="text" id="EmpNumber" name="emp_number"
               class="mt-1 w-80 rounded-s border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right" disabled />
           </div>
-          <div class="col-span-6">
+          <div class="col-span-6 ">
             <app-input [control]="authForm.get('email')" placeholder="email@mail.com" type="email"
-              label="البريد الالكتروني"></app-input>
+              label="البريد الالكتروني"
+            size="50"  maxlength="50" autofocus="true" required="true"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></app-input>
             </div>
             <div class="col-span-6">
-              <app-input [control]="authForm.get('password')" placeholder="********" type="password" label="كلمة المرور">
-                ></app-input>
+              <app-input [control]="authForm.get('password')" placeholder="********" [type]="showPassword ? 'text':'password'"
+                label="كلمة المرور" minlength="8"
+                maxlength="18" required="true" pattern=".{8,}" title="8 حروف او اكثر">
+                <svg class="absolute left-10 bottom-3 text-gray-400 hover:text-gray-900" fill="none" stroke="currentColor"
+                  stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" (click)="togglePassword()" *ngIf="!showPassword" input-icon>
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z">
+                  </path>
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                </svg>
+                <svg class="absolute left-10 bottom-3 text-gray-400 hover:text-gray-900" fill="none" stroke="currentColor"
+                  stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                  (click)="togglePassword()" *ngIf="showPassword" input-icon>
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M3.98 8.223A10.477 10.477 0 001.934 12C3.226 16.338 7.244 19.5 12 19.5c.993 0 1.953-.138 2.863-.395M6.228 6.228A10.45 10.45 0 0112 4.5c4.756 0 8.773 3.162 10.065 7.498a10.523 10.523 0 01-4.293 5.774M6.228 6.228L3 3m3.228 3.228l3.65 3.65m7.894 7.894L21 21m-3.228-3.228l-3.65-3.65m0 0a3 3 0 10-4.243-4.243m4.242 4.242L9.88 9.88">
+                  </path>
+                </svg>
+                </app-input>
             </div>
             <div class="col-span-6">
-            <label for="MarketingAccept" class="flex flex-row-reverse gap-4">
-              <input type="checkbox" id="MarketingAccept" name="marketing_accept"
+            <label for="RememberAccept" class="flex flex-row-reverse gap-4">
+              <input type="checkbox" id="RememberAccept" name="remembering_accept"
                 class="h-5 w-5 rounded-md border-gray-200 bg-white shadow-sm" />
 
               <span class="text-sm text-gray-700 underline">
@@ -83,7 +100,7 @@
           </div>
           <div class="col-span-6">
             <button
-              class="inline-block w-80 shrink-0 rounded-md border border-green-600 bg-gradient-to-bl from-green-300 to-green-900  px-12 py-3 text-sm font-semibold text-white hover:text-gray-50 focus:outline-none active:text-white disabled:cursor-not-allowed"  type="submit" [disabled]="authForm.invalid">
+              class="inline-block w-full shrink-0 rounded-md border border-green-600 bg-gradient-to-bl from-green-300 to-green-900  px-12 py-3 text-sm font-semibold text-white hover:text-gray-50 focus:outline-none active:text-white disabled:cursor-not-allowed"  type="submit" [disabled]="authForm.invalid">
               تسجيل الدخول </button>
           </div>
           <div class="col-span-6">
