--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -11,18 +11,10 @@
 <!-- breadcrumb and header -->
 
 <!-- search-bar -->
-<div class="search-bar mr-5 ">
+<div class="search-bar mr-5 flex items-center">
     <app-filter-bar (treatmentsFilter)="onTreatmentsFilter($event)"></app-filter-bar>
     <app-search-bar (searchTreatment)="onTreatmentsSearch($event)"></app-search-bar>
-    <div class="flex items-center text-green-700">
-        <span class="font-semibold ml-9 mr-2"> البحث المتقدم</span>
-        <svg fill="none" class="w-5 h-5 hover:text-green-900" stroke="currentColor" stroke-width="2.5"
-            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path stroke-linecap="round" stroke-linejoin="round"
-                d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75">
-            </path>
-        </svg>
-    </div>
+    <app-advanced-search></app-advanced-search>
 </div>
 <!-- search-bar -->
 
@@ -55,15 +47,15 @@
             <div class="treatments w-96 p-2 my-1 h-96 overflow-y-scroll" *ngIf="(treatments); else placeholder">
                 <li *ngFor="let treatment of (treatments)">
                     <!-- TODO: add some class to handle the read and unread treatments -->
-                    <a class="block max-w-sm p-2 my-1 bg-white border border-gray-200 rounded-s shadow hover:bg-gray-50 visited:"
-                        [routerLink]="treatment.id" routerLinkActive="active">
+                    <a class="block max-w-sm p-2 my-1 bg-white border border-gray-200 rounded-s shadow hover:bg-gray-50 "
+                        [ngClass]="({'border-2 border-r-red-600': treatment.treatmenttype === 'عاجلة', 'border-2 border-r-yellow-600': treatment.treatmenttype === 'رسائل', 'border-2 border-r-teal-500': treatment.treatmenttype === 'طلبات', 'border-2 border-r-blue-500': treatment.treatmenttype === 'معاملات', 'border-2 border-r-purple-600': treatment.treatmenttype === 'للتوقيع', 'border-2 border-r-blue-600': treatment.treatmenttype === 'جديد'})"
+                        [routerLink]="treatment.id" routerLinkActive="active" (click)="onTreatmentOpen(treatment.id)">
                         <div class="flex flex-row-reverse justify-between">
-
+                            <div class="flex flex-row-reverse items-center">
                             <h5 class="mb-2 font-semibold text-gray-900"> {{treatment.subject}}</h5>
                             <div class="indicator inline-flex items-start justify-around">
-                                <span class="flex w-3 h-3 mx-0.5 bg-gray-200 rounded-full"></span>
-                                <span class="flex w-3 h-3 mx-0.5 bg-gray-900 rounded-full dark:bg-gray-700"></span>
-                                <span class="flex w-3 h-3 mx-0.5 bg-red-500 rounded-full"></span>
+                                <span class="flex w-3 h-3 mr-2 bg-green-600 rounded-full" *ngIf="!treatmentIds.includes(treatment.id)"></span>
+                            </div>
                             </div>
                             <p>
                                 <svg color="green" fill="none" stroke="currentColor" stroke-width="1.5"
