--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,21 +1,24 @@
-<div [ngClass]="control.invalid && showErrors() ? 'error' : ''">
+<div [ngClass]="control.invalid && showErrors() ? 'error relative ' : 'relative'">
   <label class="block text-sm font-semibold text-gray-700">{{label}}</label>
+    <ng-content selector="input-icon"></ng-content>
   <input [formControl]="control" [placeholder]="placeholder" [type]="type" [value]="value"
-    class="mt-1 w-80 rounded-s border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right" />
-  <div *ngIf="showErrors()">
-    <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="control.errors['required']">
+    class="mt-1 rounded-s border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right" [size]="size" [maxlength]="maxlength" [minlength]="minlength" [required]="required" [disabled]="disabled" [pattern]="pattern" [autocomplete]="autocomplete" [autofocus]="autofocus" [title]="title"/>
+  <div
+    class="absolute left-1/2 right-1/2 w-1/2 z-10 px-3 py-1 text-sm font-medium text-white bg-red-900 rounded-lg shadow-sm tooltip"
+    *ngIf="showErrors()">
+    <p class="text-sm text-white" *ngIf="control.errors['required']">
       هذا الحقل مطلوب
     </p>
-    <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="control.errors['minlength']">
+    <p class=" text-sm text-white" *ngIf="control.errors['minlength']">
       الحد الأدنى للحروف هو {{control.errors['minlength'].requiredLength}}
     </p>
-    <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="control.errors['maxlength']">
+    <p class="text-sm text-white" *ngIf="control.errors['maxlength']">
       الحد الأقصى للحروف هو {{control.errors['maxlength'].requiredLength}}
     </p>
-    <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="control.errors['pattern']">
+    <p class=" text-sm text-white" *ngIf="control.errors['pattern']">
       البريد الالكتروني الذي تم ادخاله غير صالح
     </p>
-    <p class="mt-2 text-sm text-red-600 dark:text-red-500" *ngIf="control.errors['notEmailUnique']">
+    <p class=" text-sm text-white" *ngIf="control.errors['notEmailUnique']">
       هذا البريد الالكتروني مستخدم من قبل
     </p>
   </div>
