--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,11 +1,11 @@
 <!-- Main modal -->
-  <div class="w-1/2 h-1/2 absolute top-1/4 left-1/4 rounded-sm p-4 backdrop-blur-3xl ">
-  <div class="flex flex-col w-full max-w-3xl ">
+  <div
+    class="w-1/3 absolute top-16 left-1/4 rounded-md shadow-md border-2 border-green-500 px-5 py-5 backdrop-blur-xl ">
+    <div class="flex flex-col w-full max-w-3xl ">
     <!-- Modal content -->
-    <div class=" bg-white rounded-s shadow-lg ">
+    
       <!-- Modal header -->
       <div class="modal-header">
-
         <ng-content select="[modal-header]"></ng-content>
       </div>
       <!-- Modal body -->
