--- a/src/app/pages/inbox/components/detailed/detailed.component.html
+++ b/src/app/pages/inbox/components/detailed/detailed.component.html
@@ -15,56 +15,218 @@
   </div>
   <hr
     class="my-4 h-px border-t-0 bg-transparent bg-gradient-to-r from-transparent via-neutral-500 to-transparent opacity-25 " />
-    <div class="mx-5 my-4">
-  <p>الاجراءات السريعة</p>
-  <div class="flex flex-row-reverse flex-wrap mt-2">
-    <button (click)="openConfirmModal()" type="button"
-      class="text-white border-2 border-dotted border-green-600 bg-green-600 font-medium rounded-md shadow-md text-sm px-6 py-2 text-center mr-2 mb-2 hover:bg-transparent hover:border-emerald-700 hover:border-dotted hover:border-2 hover:text-green-700">احالة</button>
-      
-  </div>
-  </div>
-<!-- tabs  -->
-<app-tab-bar></app-tab-bar>
-  <!-- tabs  -->
+  <div class="mx-5 my-4">
+    <p>الاجراءات السريعة</p>
+    <div class="flex flex-row-reverse flex-wrap mt-2">
+      <button (click)="openAssignementModal()" type="button"
+        class="text-white border-2 border-dotted border-green-600 bg-green-600 font-medium rounded-md shadow-md text-sm px-6 py-2 text-center mr-2 mb-2 hover:bg-transparent hover:border-emerald-700 hover:border-dotted hover:border-2 hover:text-green-700">احالة</button>
+      <button (click)="openConfirmModal()" type="button"
+        class="text-white border-2 border-dotted border-green-600 bg-green-600 font-medium rounded-md shadow-md text-sm px-6 py-2 text-center mr-2 mb-2 hover:bg-transparent hover:border-emerald-700 hover:border-dotted hover:border-2 hover:text-green-700">توقيع</button>
+<button (click)="openExplainatoryModal()" type="button"
+  class="text-white border-2 border-dotted border-green-600 bg-green-600 font-medium rounded-md shadow-md text-sm px-6 py-2 text-center mr-2 mb-2 hover:bg-transparent hover:border-emerald-700 hover:border-dotted hover:border-2 hover:text-green-700">اعادة
+  للمصدر</button>
+<button (click)="openConfirmModal()" type="button"
+  class="text-white border-2 border-dotted border-green-600 bg-green-600 font-medium rounded-md shadow-md text-sm px-6 py-2 text-center mr-2 mb-2 hover:bg-transparent hover:border-emerald-700 hover:border-dotted hover:border-2 hover:text-green-700">الشروحات</button>
     </div>
-    <!-- confirmation modal  -->
-    <app-confirm-modal *ngIf="showConfirmModal" (dismiss)="onDismiss($event)">
-      <div modal-header>
-        <button type="button"
-          class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
-          data-modal-hide="popup-modal">
-          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
-            (click)="onConfirmationCloseHandled()">
-            <path fill-rule="evenodd"
-              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-              clip-rule="evenodd"></path>
-          </svg>
-          <span class="sr-only">Close modal</span>
-        </button>
-      </div>
-      <div class="p-6 text-center" modal-body>
-        <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor"
-          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+  </div>
+  <!-- tabs  -->
+  <app-tab-bar></app-tab-bar>
+  <!-- tabs  -->
+</div>
+<!-- confirmation modal  -->
+<app-confirm-modal *ngIf="showConfirmModal" (dismiss)="onDismiss($event)">
+  <div modal-header>
+    <button type="button"
+      class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
+      data-modal-hide="popup-modal">
+      <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+        (click)="onConfirmationCloseHandled()">
+        <path fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"></path>
+      </svg>
+      <span class="sr-only">Close modal</span>
+    </button>
+  </div>
+  <div class="p-6 text-center" modal-body>
+    <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 " fill="none" stroke="currentColor"
+      viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+    </svg>
+    <h3 class="mb-5 text-lg font-normal text-gray-500 ">هل انت متأكد من رغبتك باتمام عملية التوقيع؟</h3>
+  </div>
+  <div modal-footer>
+    <div class="flex p-5">
+      <button data-modal-hide="popup-modal" type="button"
+        class="mx-0.5 bg-gradient-to-bl from-green-400 to-green-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-md shadow-inner hover:bg-gradient-to-br"
+        (click)="submitAssignment(treatment$.id)">
+        تأكيد
+      </button>
+      <button data-modal-hide="popup-modal" type="button"
+        class="mx-0.5 inline-block px-5 py-2 my-1 border-solid border-2 text-black border-gray-200 font-medium rounded-md hover:text-gray-900 hover:bg-gray-200"
+        (click)="onConfirmationCloseHandled()">الغاء</button>
+    </div>
+  </div>
+</app-confirm-modal>
+<!-- confirmation modal  -->
+<!-- assignement modal  -->
+<app-modal *ngIf="showAssignementModal" (dismiss)="onAssignementModalDismiss($event)">
+  <div modal-header>
+    <div class="flex justify-between ">
+      <button type="button"
+        class=" text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5  inline-flex items-center"
+        data-modal-hide="popup-modal">
+        <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg" (click)="onAssignementCloseHandled()">
+          <path fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"></path>
         </svg>
-        <h3 class="mb-5 text-lg font-normal text-gray-500 ">هل انت متأكد من رغبتك باتمام عملية الاحالة؟</h3>
+        <span class="sr-only">Close modal</span>
+      </button>
+      <h3 class="text-xl font-semibold text-gray-900 ">
+        احالة
+      </h3>
+    </div>
+  </div>
+  <div modal-body>
+    <div
+      class="p-5 mt-4 border border-green-500 border-dashed border-b-0 w-full h-full grid grid-rows-3 grid-cols-2 gap-2 justify-end">
+      <div class="flex flex-col">
+        <label class="text-sm font-semibold text-gray-900 mb-2">المستقبل</label>
+        <select name="" id="" class="border border-gray-300 rounded-md p-2">
+          <option value=""></option>
+          <option value=""></option>
+          <option value=""></option>
+        </select>
       </div>
-      <div modal-footer>
-        <div class="flex p-5">
-        <button data-modal-hide="popup-modal" type="button"
-          class="mx-0.5 bg-gradient-to-bl from-green-400 to-green-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-md shadow-inner hover:bg-gradient-to-br"
-          (click)="submitAssignment(treatment$.id)">
-          تأكيد
+      <div class="flex flex-col">
+        <label class="text-sm font-semibold text-gray-900 mb-2">احالة الى </label>
+        <select name="" id="" class="border border-gray-300 rounded-md p-2">
+          <option value=""></option>
+          <option value=""></option>
+          <option value=""></option>
+        </select>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-sm font-semibold text-gray-900 mb-2">درجة الاهمية</label>
+        <select name="" id="" class="border border-gray-300 rounded-md p-2">
+          <option value=""></option>
+          <option value=""></option>
+          <option value=""></option>
+        </select>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-sm font-semibold text-gray-900 mb-2">التوجيه</label>
+        <select name="" id="" class="border border-gray-300 rounded-md p-2">
+          <option value=""></option>
+          <option value=""></option>
+          <option value=""></option>
+        </select>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-sm font-semibold text-gray-900 mb-2">الخصوصية</label>
+        <select name="" id="" class="border border-gray-300 rounded-md p-2">
+          <option value=""></option>
+          <option value=""></option>
+          <option value=""></option>
+        </select>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-sm font-semibold text-gray-900 mb-2">تاريخ الانتهاء</label>
+        <input type="date" class="border border-gray-300 rounded-md p-1" />
+      </div>
+    </div>
+    <div class="flex flex-col p-5 border-l border-r border-green-500 border-dashed w-full h-full ">
+      <label class="text-sm font-semibold text-gray-900 mb-2">تعليمات المستقبل </label>
+      <textarea id="instructions" name="instructions" class="border border-gray-300 text-right"> </textarea>
+    </div>
+    <div class="flex flex-col p-5 border border-green-500 border-dashed border-t-0 w-full h-full ">
+      <div class="flex flex-row-reverse justify-between items-center ">
+        <div class="w-full space-x-2">
+          <label for=""> خاص</label>
+          <input type="checkbox">
+          <label for="">مراسلة ورقية</label>
+          <input type="checkbox">
+          <label for="">صورة </label>
+          <input type="checkbox">
+          <label for="">للمتابعة </label>
+          <input type="checkbox">
+        </div>
+        <span>
+          <button (click)="addReferedUser()"
+            class="inline-block  shrink-0 rounded-md border border-green-600 bg-gradient-to-bl from-green-300 to-green-900  px-2 py-1 text-sm font-semibold text-white hover:text-gray-50 focus:outline-none active:text-white disabled:cursor-not-allowed">
+            <svg class="mx-1" fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15"></path>
+            </svg>
+            اضافة
+          </button>
+        </span>
+      </div>
+    </div>
+    <div class="flex flex-row-reverse p-3 border border-green-500 border-dashed border-t-0 h-full w-full min-h-20">
+      <ul class="h-full w-full flex flex-row-reverse gap-1 overflow-y-scroll">
+        <button type="button"
+          class="relative w-1/3 h-full border border-green-700 items-center px-5 py-2.5 my-auto text-sm font-medium text-center text-green-700 rounded-md hover:bg-green-700 hover:text-white hover:border-white "
+          *ngFor="let referedUser of referedUsers">
+          {{referedUser.name}}
+          <div (click)="removeReferedUser(referedUser.id)"
+            class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500 border-2 border-white rounded-full -top-1 -right-1 ">
+            X</div>
         </button>
-        <button data-modal-hide="popup-modal" type="button"
-          class="mx-0.5 inline-block px-5 py-2 my-1 border-solid border-2 text-black border-gray-200 font-medium rounded-md hover:text-gray-900 hover:bg-gray-200"
-          (click)="onConfirmationCloseHandled()">الغاء</button>
-          </div>
+      </ul>
+    </div>
+    <div class="flex flex-col p-2 border border-green-500 border-dashed border-t-0 w-full h-full ">
+      <div class="flex justify-start">
+        <button (click)="onAssignementCloseHandled()"
+          class="inline-block  shrink-0 rounded-md border border-gray-300 mx-1 px-4 py-2 text-sm font-semibold hover:bg-gray-400 hover:text-white focus:outline-none active:text-white disabled:cursor-not-allowed">
+          الغاء
+        </button>
+        <button (click)="onAssignementSubmit()"
+          class="inline-block  shrink-0 rounded-md mx-1 border border-green-600 bg-gradient-to-bl from-green-300 to-green-900  px-4 py-1 text-sm font-semibold text-white hover:text-gray-50 focus:outline-none active:text-white disabled:cursor-not-allowed">
+          ارسال
+        </button>
       </div>
-    </app-confirm-modal>
-    <!-- confirmation modal  -->
-    <!-- toast  -->
-  <app-toast *ngIf="showToast" (dismiss)="closeToast($event)" [toastType]="toastType" toastTitle="">
-  </app-toast>
-    <!-- toast  -->
+    </div>
+  </div>
+</app-modal>
+<!--assignment modal  -->
+<!-- explianatory-modal -->
+<app-explianatory-modal *ngIf="showExplainatoryModal">
+  <div modal-header>
+    <button type="button"
+      class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
+      data-modal-hide="popup-modal">
+      <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
+        (click)="onExplainatoryModalCloseHandled()">
+        <path fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"></path>
+      </svg>
+      <span class="sr-only">Close modal</span>
+    </button>
+  </div>
+  <div class="p-6 text-right" modal-body>
+    <h3 class="m-5 text-lg font-normal text-gray-500 ">يرجى ادخال شرح الاعادة</h3>
+    <textarea name="explianatory-modal" id="" class="text-right w-full max-h-20" maxlength="2000"></textarea>
+  </div>
+  <div modal-footer>
+    <div class="flex p-5">
+      <button data-modal-hide="popup-modal" type="button"
+        class="mx-0.5 bg-gradient-to-bl from-green-400 to-green-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-md shadow-inner hover:bg-gradient-to-br"
+        (click)="onExplainatorySubmit(treatment$.id)">
+        تأكيد
+      </button>
+      <button data-modal-hide="popup-modal" type="button"
+        class="mx-0.5 inline-block px-5 py-2 my-1 border-solid border-2 text-black border-gray-200 font-medium rounded-md hover:text-gray-900 hover:bg-gray-200"
+        (click)="onExplainatoryModalCloseHandled()">الغاء</button>
+    </div>
+  </div>
+</app-explianatory-modal>
+<!-- explianatory-modal -->
+<!-- toast  -->
+<app-toast *ngIf="showToast" (dismiss)="closeToast($event)" [toastType]="toastType" toastTitle="">
+</app-toast>
+<!-- toast  -->
