--- a/src/app/pages/inbox/views/advanced-search/advanced-search.component.html
+++ b/src/app/pages/inbox/views/advanced-search/advanced-search.component.html
@@ -1,11 +1,5 @@
 <div class="flex items-center text-green-700">
-  <span class="font-semibold ml-9 mr-2"> البحث المتقدم</span>
-  <svg fill="none" class="w-5 h-5 hover:text-green-900" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24"
-    xmlns="http://www.w3.org/2000/svg" aria-hidden="true" (click)="openSearchModal()">
-    <path stroke-linecap="round" stroke-linejoin="round"
-      d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75">
-    </path>
-  </svg>
+  <span class="font-semibold ml-9 mr-2 hover:cursor-pointer" (click)="openSearchModal()"> البحث المتقدم</span>
 </div>
 
 <!-- advanced search Modal -->
@@ -13,6 +7,7 @@
   <div modal-header>
     <div class="flex justify-between ">
       <button type="button"
+      (click)="onSearchModalDismiss()"
         class=" text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5  inline-flex items-center"
         data-modal-hide="popup-modal">
         <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
@@ -24,7 +19,7 @@
         <span class="sr-only">Close modal</span>
       </button>
       <h3 class="text-xl font-semibold text-gray-900 ">
-        احالة
+        البحث المتقدم
       </h3>
     </div>
     </div>
@@ -116,7 +111,8 @@
     <div class="flex flex-col p-2 border border-green-500 border-dashed border-t-0 w-full h-full ">
       <div class="flex justify-start">
         <button
-          class="inline-block  shrink-0 rounded-md border border-gray-300 mx-1 px-4 py-2 text-sm font-semibold hover:bg-gray-100 focus:outline-none active:text-white disabled:cursor-not-allowed">
+        (click)="onSearchModalDismiss()"
+          class="inline-block  shrink-0 rounded-md border border-gray-300 mx-1 px-4 py-2 text-sm font-semibold hover:bg-gray-300 focus:outline-none active:text-white disabled:cursor-not-allowed">
           الغاء
         </button>
         <button
