--- a/src/app/pages/inbox/views/search-bar/search-bar.component.html
+++ b/src/app/pages/inbox/views/search-bar/search-bar.component.html
@@ -6,7 +6,8 @@
       <div
         class="flex-shrink z-10 inline-flex items-center text-sm font-medium text-right text-gray-900 bg-gray-200
                           border border-gray-300 rounded-md hover:bg-gray-200 focus:outline-none  ">
-        <select formControlName="searchTag" class="py-1 px-2 text-sm  text-gray-900 bg-gray-200 text-right" name="treatment"
+        <select formControlName="searchTag" class="py-1 px-2 text-sm -z-10 text-gray-900 bg-gray-200 text-right"
+          name="treatment"
           id="treatment">
           <option class="inline-flex  w-full px-4 py-1  hover:bg-gray-100 bg-gray-100" value="all" [defaultSelected]="true">كل
             المعاملات</option>
@@ -18,7 +19,7 @@
       </div>
         <div class="relative w-full mr-2">
           <input formControlName="search" type="search"
-            class="inline-block py-2 w-full z-20  text-right text-sm text-gray-900 bg-gray-50 rounded-md  border border-gray-300"
+            class="inline-block py-2 w-full  text-right text-sm text-gray-900 bg-gray-50 rounded-md  border border-gray-300"
             placeholder="البحث باسم المعاملة..." size="125" maxlength="100" required>
         </div>
       <button type="submit"
