--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,6 +1,6 @@
 <!-- Main modal -->
   <div
-    class="w-1/3 absolute top-16 left-1/4 rounded-md shadow-md border-2 border-green-500 px-5 py-5 backdrop-blur-xl ">
+    class="w-1/3 z-20 absolute top-16 left-1/4 rounded-md shadow-md border-2 border-green-500 px-5 py-5 backdrop-blur-md " >
     <div class="flex flex-col w-full max-w-3xl ">
     <!-- Modal content -->
     
