--- a/src/app/pages/index/components/product-details/product-details.component.html
+++ b/src/app/pages/index/components/product-details/product-details.component.html
@@ -22,7 +22,7 @@
 
     <!-- Product info -->
     <div
-      class="mx-auto max-w-2xl relative px-4 pb-16 pt-10 sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8 lg:px-8 lg:pb-24 lg:pt-16">
+      class="mx-auto max-w-3xl  px-4 pb-16 pt-10 sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8 lg:px-8 lg:pb-24 lg:pt-16 relative">
       <!-- animated blured divs -->
       <div
         class="absolute top-[0%] left-8 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
