--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -155,10 +155,17 @@
                 placeholder="••••" required="">
             </div>
           </div>
-          <div class="flex">
+          <div class="flex items-center gap-x-3">
             <button type="submit" class="place-order-button  px-5 py-2.5 ">
               تأكيد الطلب
             </button>
+            <a routerLink="/index" class="font-medium text-lg hover:underline">
+              عودة للتصفح
+              <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
+              </svg>
+            </a>
           </div>
           <hr class="my-2">
           <div class="flex items-center">
