--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -273,7 +273,7 @@
               </p>
             </div>
             <div class="">
-              <p class="font-light text-xs text-xs">
+              <p class="font-light text-xs">
               <h1> Expiry
               </h1>
               <p class="font-medium tracking-wider text-sm">
@@ -331,7 +331,7 @@
               </p>
             </div>
             <div class="">
-              <p class="font-light text-xs text-xs">
+              <p class="font-light text-xs">
               <h1> Expiry
               </h1>
               <p class="font-medium tracking-wider text-sm">
