--- a/src/app/pages/profile/components/home/home.component.html
+++ b/src/app/pages/profile/components/home/home.component.html
@@ -259,8 +259,8 @@
       <div class="border-2 border-dashed rounded-3xl border-gray-300 p-4 mb-4">
         <h3 class="text-3xl p-4 text-center"> طلباتي</h3>
         <section class="border-2 border-dashed border-gray-200  overflow-auto rounded-3xl w-full p-4 sm:p-5">
-          <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto">
-            <table class="w-full text-sm text-left text-gray-500 ">
+          <div class="relative rounded-3xl border border-dashed border-gray-200 mx-auto h-96 overflow-y-scroll">
+            <table class="w-full text-sm text-left text-gray-500  ">
               <thead class=" text-xs text-gray-700 uppercase bg-gray-50 rounded-t-3xl">
                 <tr>
                   <th scope="col" class="px-6 py-3">
