--- a/src/app/pages/dashboard/components/orders/orders.component.html
+++ b/src/app/pages/dashboard/components/orders/orders.component.html
@@ -2,7 +2,7 @@
   
   <div class="relative rounded-3xl border-2 border-dashed border-gray-200 mx-auto h-96 overflow-y-scroll">
     <table class="w-full text-sm text-left text-gray-500 ">
-      <thead class=" text-xs text-gray-700 uppercase bg-gray-50 :bg-gray-700 :text-gray-400">
+      <thead class=" text-xs text-gray-700 uppercase bg-gray-50 ">
         <tr>
           <th scope="col" class="px-6 py-3">
             <span class="sr-only">Image</span>
